SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/p2s_base1__PreviousTransitionDateTime__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__PreviousTransitionDateTime__c</fullName>
    <description>This is a time stamp of when the Lead moved into the previous lifecycle stage</description>
    <inlineHelpText>This is a time stamp of when the Lead moved into the previous lifecycle stage</inlineHelpText>
    <label>Previous Transition DateTime</label>
    <type>DateTime</type>
</CustomField>