SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/p2s_base1__TransitionDateTime__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__TransitionDateTime__c</fullName>
    <description>This is a time stamp of when the Lead moved to its current lifecycle stage</description>
    <inlineHelpText>This is a time stamp of when the Lead moved to its current lifecycle stage</inlineHelpText>
    <label>Transition DateTime</label>
    <type>DateTime</type>
</CustomField>