SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Pardot_Company_Location__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Company_Location__c</fullName>
    <description>Company location provided by our customer through pardot form (chilipiper)</description>
    <label>Pardot Company Location</label>
    <length>55</length>
    <type>Text</type>
</CustomField>