SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Past_Account_Average_NPS__c.field-meta.xml
<CustomField>
    <fullName>Past_Account_Average_NPS__c</fullName>
    <description>Usergem</description>
    <formula>IF( ISBLANK(UserGems__PastAccount__c), 0, UserGems__PastAccount__r.Average_NPS_Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Account Average NPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>