SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Past_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Past_Account_Name__c</fullName>
    <formula>UserGems__PastAccount__r.Name</formula>
    <label>Past Account Name</label>
    <type>Text</type>
</CustomField>