SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Past_Account_Structure_ARR__c.field-meta.xml
<CustomField>
    <fullName>Past_Account_Structure_ARR__c</fullName>
    <description>Usergem</description>
    <formula>IF( ISBLANK(UserGems__PastAccount__c), 0, UserGems__PastAccount__r.Account_Structure_ARR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Account Structure ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>