SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Past_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Past_Account_Type__c</fullName>
    <description>Usergem</description>
    <formula>IF( ISBLANK(UserGems__PastAccount__c), &quot;&quot;, TEXT(UserGems__PastAccount__r.Type))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Account Type</label>
    <type>Text</type>
</CustomField>