SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Pendo_NPS_Rating__c.field-meta.xml
<CustomField>
    <fullName>Pendo_NPS_Rating__c</fullName>
    <label>Pendo NPS Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>