SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>A default persona for the Lead, based on title and seniority</description>
    <formula>IF(ISBLANK(Title),&quot;Unknown&quot;,
IF(  OR(CONTAINS( LOWER(Title),&quot;engineer&quot;),CONTAINS( LOWER(Title),&quot;developer&quot;), CONTAINS( LOWER(Title),&quot;architect&quot;), CONTAINS( LOWER(Title),&quot;cto&quot;), CONTAINS( LOWER(Title),&quot;agile&quot;), CONTAINS( LOWER(Title),&quot;tech&quot;), CONTAINS( LOWER(Title),&quot;software&quot;)),
&quot;&quot;, 
IF(CONTAINS(LOWER(Title),&quot;product&quot;),&quot;Product&quot;, &quot;Other&quot;)))</formula>
    <inlineHelpText>A default persona for the Lead, based on title and seniority</inlineHelpText>
    <label>Persona</label>
    <type>Text</type>
</CustomField>