SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Persona_Text__c.field-meta.xml
<CustomField>
    <fullName>Persona_Text__c</fullName>
    <description>The Persona formula field - pushed into a text field.</description>
    <inlineHelpText>The Persona formula field - pushed into a text field.</inlineHelpText>
    <label>Persona Text</label>
    <length>16</length>
    <type>Text</type>
</CustomField>