SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Qualifying_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Date__c</fullName>
    <label>Qualifying Date</label>
    <type>Date</type>
</CustomField>