SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Recycle_Date__c.field-meta.xml
<CustomField>
    <fullName>Recycle_Date__c</fullName>
    <label>Recycle Date</label>
    <type>Date</type>
</CustomField>