SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Referral_source__c.field-meta.xml
<CustomField>
    <fullName>Referral_source__c</fullName>
    <label>Referral source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>