SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Release_timing_detail__c.field-meta.xml
<CustomField>
    <fullName>Release_timing_detail__c</fullName>
    <description>Do they release at least once per quarter? Please provide additional detail</description>
    <inlineHelpText>Do they release at least once per quarter? Please provide additional detail</inlineHelpText>
    <label>Release timing detail</label>
    <length>55</length>
    <type>Text</type>
</CustomField>