SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Round_Robin_ID__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_ID__c</fullName>
    <description>Round Robin Formula. Take each lead, assign a number(Lead_number), assign to a rep(3 = 3 AEs). 

MOD(Value(Lead_Number_c),3) +1</description>
    <formula>MOD(Value(Lead_Number__c),3) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round_Robin_ID</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>