SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Round_Robin_RAND_ID__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_RAND_ID__c</fullName>
    <description>This formula uses a custom auto-number field called Lead Number that assigns each lead a sequential number starting with 1.</description>
    <formula>MOD(VALUE(Lead_Number__c) ,3) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Robin RAND ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>