SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Sales_Unsubscribe__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unsubscribe__c</fullName>
    <label>Sales Unsubscribe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>