SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Segment_From_Account_Match_Employees__c.field-meta.xml
<CustomField>
    <fullName>Segment_From_Account_Match_Employees__c</fullName>
    <formula>IF( Account_Match_Employees__c &gt;= 5000, &quot;Field&quot;,
IF( Account_Match_Employees__c &gt;= 250, &quot;Inside&quot;,
IF( Account_Match_Employees__c &gt;= 1, &quot;SMB&quot;,
&quot;Unknown&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment From Account Match Employees</label>
    <type>Text</type>
</CustomField>