SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Segment_From_Lead_Employees__c.field-meta.xml
<CustomField>
    <fullName>Segment_From_Lead_Employees__c</fullName>
    <formula>IF( NumberOfEmployees &gt;= 5000, &quot;Field&quot;,
IF( NumberOfEmployees &gt;= 250, &quot;Inside&quot;,
IF( NumberOfEmployees &gt;= 1, &quot;SMB&quot;,
&quot;Unknown&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment From Lead Employees</label>
    <type>Text</type>
</CustomField>