SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Sequence_State__c.field-meta.xml
<CustomField>
    <fullName>Sequence_State__c</fullName>
    <description>To see what state a sequence is in</description>
    <label>Sequence State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>