SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>Signup_Date__c</fullName>
    <description>First day of 30-day trial</description>
    <label>Signup Date</label>
    <type>Date</type>
</CustomField>