SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/SQL_Date__c.field-meta.xml
<CustomField>
    <fullName>SQL_Date__c</fullName>
    <description>Date when lead/contact became an SQL</description>
    <label>SQL Date</label>
    <type>Date</type>
</CustomField>