SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Stack__c.field-meta.xml
<CustomField>
    <fullName>Stack__c</fullName>
    <description>The prospect&apos;s stack (e.g., Javascript, C++) as pulled from Pardot.</description>
    <inlineHelpText>The prospect&apos;s stack (e.g., Javascript, C++) as pulled from Pardot.</inlineHelpText>
    <label>Stack</label>
    <type>TextArea</type>
</CustomField>