SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>MQL: Any potential customer that has started to educate themselves about our use cases or pricing, or in some way indicated they are moving forward in the sales funnel.
SQL: A lead that is educated and is capable of making a purchase</description>
    <inlineHelpText>MQL: Any potential customer that has started to educate themselves about our use cases or pricing, or in some way indicated they are moving forward in the sales funnel. 
SQL: A lead that is educated and is capable of making a purchase</inlineHelpText>
    <label>Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Stages</valueSetName>
    </valueSet>
</CustomField>