SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Start_an_eval_within_6_months__c.field-meta.xml
<CustomField>
    <fullName>Start_an_eval_within_6_months__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Would the company/team like to start an evaluation within the next 6 months?</description>
    <inlineHelpText>Would the company/team like to start an evaluation within the next 6 months?</inlineHelpText>
    <label>Start an eval within 6 months?</label>
    <type>Checkbox</type>
</CustomField>