SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source__c</fullName>
    <label>Lead Sub-Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound - Search</fullName>
            </value>
            <value>
                <fullName>Inbound - Advertising</fullName>
            </value>
            <value>
                <fullName>Inbound - Event</fullName>
            </value>
            <value>
                <fullName>Inbound - Intercom</fullName>
            </value>
            <value>
                <fullName>Inbound - Referral</fullName>
            </value>
            <value>
                <fullName>Inbound - Social</fullName>
            </value>
            <value>
                <fullName>Inbound - Sponsored Content</fullName>
            </value>
            <value>
                <fullName>Inbound - Web Referral</fullName>
            </value>
            <value>
                <fullName>Outbound - Business Development / Apollo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>