SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Sync_to_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to Outreach</label>
    <type>Checkbox</type>
</CustomField>