SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Sync_to_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_SFDC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom sync rule to prevent data that should not be synced back.</description>
    <label>Sync to SFDC</label>
    <type>Checkbox</type>
</CustomField>