SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Temp_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Temp_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp Boolean</label>
    <type>Checkbox</type>
</CustomField>