SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Ticket_Name__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Name__c</fullName>
    <description>splash mapped</description>
    <label>Ticket Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>