SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>