SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/TQL_over_50__c.field-meta.xml
<CustomField>
    <fullName>TQL_over_50__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TQL over 50</label>
    <type>Checkbox</type>
</CustomField>