SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/TQL_Score_at_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>TQL_Score_at_Date_Stamp__c</fullName>
    <label>TQL Score at Date Stamp</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>