SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Trial_Signup_date_Today__c.field-meta.xml
<CustomField>
    <fullName>Trial_Signup_date_Today__c</fullName>
    <formula>Signup_Date__c = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trial Signup date is Today</label>
    <type>Checkbox</type>
</CustomField>