SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/TrialEndDate__c.field-meta.xml
<CustomField>
    <fullName>TrialEndDate__c</fullName>
    <description>Last date of 30-day trial</description>
    <label>Trial End Date</label>
    <type>Date</type>
</CustomField>