SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Trigger_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Workflow</label>
    <type>Checkbox</type>
</CustomField>