SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/TShirt_Gender__c.field-meta.xml
<CustomField>
    <fullName>TShirt_Gender__c</fullName>
    <label>TShirt Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mens</fullName>
            </value>
            <value>
                <fullName>Womens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>