SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/TShirt_Size__c.field-meta.xml
<CustomField>
    <fullName>TShirt_Size__c</fullName>
    <label>TShirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>XXL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>