SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/UG_previously_had_LD_ID__c.field-meta.xml
<CustomField>
    <fullName>UG_previously_had_LD_ID__c</fullName>
    <formula>IF( AND(!ISBLANK(UserGems__PastContact__c) , !ISBLANK(UserGems__PastContact__r.Account_ID__c)) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Contact has LD_ID</label>
    <type>Checkbox</type>
</CustomField>