SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/UG_User_Usage__c.field-meta.xml
<CustomField>
    <fullName>UG_User_Usage__c</fullName>
    <inlineHelpText>This is a field that is populated by usergem.</inlineHelpText>
    <label>UG - User Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>