SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Update_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Update_Campaigns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Campaigns</label>
    <type>Checkbox</type>
</CustomField>