SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/US_Region__c.field-meta.xml
<CustomField>
    <fullName>US_Region__c</fullName>
    <description>US Region</description>
    <formula>CASE(State,
&quot;Washington&quot;, &quot;West&quot;,
&quot;Utah&quot;, &quot;West&quot;,
&quot;Colorado&quot;, &quot;West&quot;,
&quot;Oregon&quot;, &quot;West&quot;,
&quot;Arizona&quot;, &quot;West&quot;,
&quot;Nevada&quot;, &quot;West&quot;,
&quot;New Mexico&quot;, &quot;West&quot;,
&quot;Wyoming&quot;, &quot;West&quot;,
&quot;Idaho&quot;, &quot;West&quot;,
&quot;Hawaii&quot;, &quot;West&quot;,
&quot;Alaska&quot;, &quot;West&quot;,
&quot;Montana&quot;, &quot;West&quot;,
&quot;British Columbia&quot;, &quot;West&quot;,
&quot;Illinois&quot;, &quot;Great Lakes&quot;,
&quot;Texas&quot;, &quot;TOLA&quot;,
&quot;Michigan&quot;, &quot;Great Lakes&quot;,
&quot;Missouri&quot;, &quot;TOLA&quot;,
&quot;Wisconsin&quot;, &quot;Great Lakes&quot;,
&quot;Minnesota&quot;, &quot;Great Lakes&quot;,
&quot;Indiana&quot;, &quot;Great Lakes&quot;,
&quot;Ohio&quot;, &quot;Great Lakes&quot;,
&quot;Iowa&quot;, &quot;TOLA&quot;,
&quot;Oklahoma&quot;, &quot;TOLA&quot;,
&quot;Nebraska&quot;, &quot;TOLA&quot;,
&quot;Kansas&quot;, &quot;TOLA&quot;,
&quot;North Dakota&quot;, &quot;TOLA&quot;,
&quot;South Dakota&quot;, &quot;TOLA&quot;,
&quot;Quebec&quot;, &quot;Northeast&quot;,
&quot;Northwest Territories&quot;, &quot;Great Lakes&quot;,
&quot;New York&quot;, &quot;Tri-State&quot;,
&quot;New Jersey&quot;, &quot;Tri-State&quot;,
&quot;Massachusetts&quot;, &quot;Northeast&quot;,
&quot;Connecticut&quot;, &quot;Northeast&quot;,
&quot;New Hampshire&quot;, &quot;Northeast&quot;,
&quot;Maine&quot;, &quot;Northeast&quot;,
&quot;Rhode Island&quot;, &quot;Northeast&quot;,
&quot;Vermont&quot;, &quot;Northeast&quot;,
&quot;Ontario&quot;, &quot;Northeast&quot;,
&quot;Florida&quot;, &quot;SE + MidAtl&quot;,
&quot;Pennsylvania&quot;, &quot;Tri-State&quot;,
&quot;North Carolina&quot;, &quot;SE + MidAtl&quot;,
&quot;District of Columbia&quot;, &quot;SE + MidAtl&quot;,
&quot;Georgia&quot;, &quot;SE + MidAtl&quot;,
&quot;Virginia&quot;, &quot;SE + MidAtl&quot;,
&quot;Tennessee&quot;, &quot;SE + MidAtl&quot;,
&quot;South Carolina&quot;, &quot;SE + MidAtl&quot;,
&quot;Maryland&quot;, &quot;SE + MidAtl&quot;,
&quot;Arkansas&quot;, &quot;TOLA&quot;,
&quot;Kentucky&quot;, &quot;SE + MidAtl&quot;,
&quot;Delaware&quot;, &quot;SE + MidAtl&quot;,
&quot;Alabama&quot;, &quot;SE + MidAtl&quot;,
&quot;Mississippi&quot;, &quot;SE + MidAtl&quot;,
&quot;Louisiana&quot;, &quot;TOLA&quot;,
&quot;West Virginia&quot;, &quot;SE + MidAtl&quot;,
&quot;California&quot;, &quot;California&quot;,
&quot;Other&quot;)</formula>
    <label>US Region</label>
    <type>Text</type>
</CustomField>