SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/US_Region_Text__c.field-meta.xml
<CustomField>
    <fullName>US_Region_Text__c</fullName>
    <description>Text Field for US Regions</description>
    <label>US Region Text</label>
    <length>30</length>
    <type>Text</type>
</CustomField>