SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/UserGems__HasChangedJob__c.field-meta.xml
<CustomField>
    <fullName>UserGems__HasChangedJob__c</fullName>
    <label>UG - No Longer At Company</label>
    <type>Date</type>
</CustomField>