SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/UserGems__Is_a_UserGem__c.field-meta.xml
<CustomField>
    <fullName>UserGems__Is_a_UserGem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UG - Is A Past User</label>
    <type>Checkbox</type>
</CustomField>