SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/UserGems__PastContact__c.field-meta.xml
<CustomField>
    <fullName>UserGems__PastContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UG - Past Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>PastContactLeads</relationshipName>
    <type>Lookup</type>
</CustomField>