SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/UserGems__UG_Past_Infos__c.field-meta.xml
<CustomField>
    <fullName>UserGems__UG_Past_Infos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UG - Past Infos</label>
    <referenceTo>UserGems__UserGems__c</referenceTo>
    <relationshipLabel>Lead UG Past Infos</relationshipLabel>
    <relationshipName>Lead_UG_Past_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>