SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Wants_A_Tshirt__c.field-meta.xml
<CustomField>
    <fullName>Wants_A_Tshirt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wants A Tshirt</label>
    <type>Checkbox</type>
</CustomField>