SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Wants_Slide_Deck__c.field-meta.xml
<CustomField>
    <fullName>Wants_Slide_Deck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wants Slide Deck</label>
    <type>Checkbox</type>
</CustomField>