SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Webinar_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Start_Time__c</fullName>
    <label>Webinar Start Date</label>
    <type>DateTime</type>
</CustomField>