SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/What_languages_are_their_apps_build_in__c.field-meta.xml
<CustomField>
    <fullName>What_languages_are_their_apps_build_in__c</fullName>
    <label>What languages are their apps build in?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Languages</valueSetName>
    </valueSet>
</CustomField>