SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/What_pain_are_we_solving__c.field-meta.xml
<CustomField>
    <fullName>What_pain_are_we_solving__c</fullName>
    <description>What pain do they have? Please describe</description>
    <inlineHelpText>What pain do they have? Please describe</inlineHelpText>
    <label>What pain do they have?</label>
    <length>155</length>
    <type>Text</type>
</CustomField>