SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Working__c.field-meta.xml
<CustomField>
    <fullName>Working__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Removing from dashboard homepage view</inlineHelpText>
    <label>Working?</label>
    <type>Checkbox</type>
</CustomField>