SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/fields/Working_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Working_Date_Stamp__c</fullName>
    <label>Working Date Stamp</label>
    <type>Date</type>
</CustomField>