SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/listViews/AC_DEMOREQUESTS1.listView-meta.xml
<ListView>
    <fullName>AC_DEMOREQUESTS1</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Original_Contact_Method__c</columns>
    <columns>mkto_si__Last_Interesting_Moment__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>MQL_Score__c</columns>
    <columns>Campaigns__c</columns>
    <columns>Description__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Account_Match_Type__c</columns>
    <columns>Account_Match_Owner_Name__c</columns>
    <columns>Account_Match_Assigned_BDR__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Match_Assigned_BDR__c</field>
        <operation>contains</operation>
        <value>Angel Chong</value>
    </filters>
    <filters>
        <field>Original_Contact_Method__c</field>
        <operation>contains</operation>
        <value>Demo Request,Referral,Contact us,Contact Sales Form</value>
    </filters>
    <label>AC_DEMOREQUESTS</label>
</ListView>