SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/listViews/AC_Galaxy_Invite_1.listView-meta.xml
<ListView>
    <fullName>AC_Galaxy_Invite_1</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>AC Galaxy Invite 1</label>
</ListView>