SFDC_LD_Packages/objects-layouts/main/default/objects/Lead/listViews/AC_Inbound_Leads_by_KL.listView-meta.xml
<ListView>
    <fullName>AC_Inbound_Leads_by_KL</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>Account_Match_Owner_Name__c</columns>
    <columns>Account_Match_Assigned_BDR__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>mkto_si__Last_Interesting_Moment__c</columns>
    <columns>inActiveSequence__c</columns>
    <columns>Account_Match_Type__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Campaigns__c</columns>
    <columns>Description__c</columns>
    <columns>MQL_Score__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>FULL_NAME</columns>
    <columns>Account_Match_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>5/30/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>notContain</operation>
        <value>Apollo,ZoomInfo,Zendesk</value>
    </filters>
    <filters>
        <field>FT_Lead_Category__c</field>
        <operation>equals</operation>
        <value>Inbound</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Working</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>angel</value>
    </filters>
    <label>AC Inbound Leads - by KL</label>
</ListView>